--- a/src/main/resources/templates/interfaz_cliente/templates/envios.html
+++ b/src/main/resources/templates/interfaz_cliente/templates/envios.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Consulta de Envios - Empleado</title>
+  <title>Consulta de Envios - Cliente</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -48,7 +48,9 @@
           <i class="fas fa-user-circle user"></i>
         </button>
         <ul class="dropdown-menu boton" aria-labelledby="dropdownMenuButton1">
-          <li sec:authorize="isAuthenticated()"><a class="dropdown-item menuperfil cerrar" th:href="@{/logout}"><i class="fas fa-sign-out-alt m-1"></i>Cerrar Sesión</a></li>        </ul>
+          <li sec:authorize="isAuthenticated()"><a class="dropdown-item menuperfil cerrar" th:href="@{/logout}"><i class="fas fa-sign-out-alt m-1"></i>Cerrar Sesión</a></li>
+        <li sec:authorize="isAuthenticated()"><a class="dropdown-item menuperfil cerrar" th:href="@{/registro/editar_datos_cliente}"><i class="fas fa-user-edit m-1"></i></i>Editar Mi Información</a></li>
+        </ul>
       </div>
     </div>
   </div>
@@ -57,12 +59,11 @@
 <div class="container-fluid">
   <div class="row">
     <div class="barra-lateral col-12 col-sm-auto">
-      <h4 class="text-center">Menú Empleado</h4>
+      <h4 class="text-center">Menú Cliente</h4>
       <nav class="menu d-flex d-sm-block justify-content-center flex-wrap">
-        <a class="nav-link" th:href="@{/gestion_ventas_empleado}"><i class="fas fa-dollar-sign"></i></i><span>Consulta de Ventas</span></a>
-        <a class="nav-link" th:href="@{/solicitudes_pqrs_empleado}"><i class="far fa-smile"></i><span>Solicitudes PQRS</span></a>
-        <a class="nav-link" th:href="@{/inventario_compras_empleado}"><i class="fas fa-dolly-flatbed"></i><span>Consulta de Inventario</span></a>
-        <a class="nav-link" th:href="@{/verificacion_envios_empleado}"><i class="fas fa-shipping-fast"></i><span>Consulta de Envios</span></a>
+        <a class="nav-link" th:href="@{/compras_cliente}"><i class="fas fa-dollar-sign"></i></i><span>Mis Compras</span></a>
+        <a class="nav-link" th:href="@{/solicitudes_pqrs_cliente}"><i class="far fa-smile"></i><span>Mis Solicitudes PQRS</span></a>
+        <a class="nav-link enviosBoton d-none" th:href="@{/envios_cliente}" th:each="envio : ${envio}" th:object="${envio}" th:if="${envio.venta.pedido.cliente.email} == ${#authentication.name}"><i class="fas fa-shipping-fast"></i><span>Mis Envios</span></a>
       </nav>
     </div>
     <main class="main col">
@@ -70,7 +71,7 @@
            th:text="${mensaje}"
            class="alert">
       </div>
-      <h1>Consulta de Envios - Empleado</h1><br>
+      <h1>Consulta de Envios - Cliente</h1><br>
       <div class="row">
         <div class="col">
           <h5>Buscar</h5>
@@ -92,12 +93,12 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="envio : ${envio}">
+        <tr th:each="envio : ${envio}" th:if="${envio.venta.pedido.cliente.email} == ${#authentication.name}">
           <th scope="row" th:text="${envio.idEnvio}">1</th>
           <th scope="row"><button type="button" class="btn" data-bs-toggle="modal" th:attr="data-bs-target='#envio'+${envio.idEnvio}" title="Ver descripción de la venta" th:text="${envio.venta.idVenta}">
           </button></th>
           <td th:text="${envio.empresa}"></td>
-          <td th:text="${envio.estado}"></td>
+          <td><span class="badge estado" th:text="${envio.estado}"></span></td>
         </tr>
 
         </tbody>
@@ -131,6 +132,22 @@
     }
   }
 }
+
+envios = document.getElementsByClassName('enviosBoton')
+envios[0].classList.remove('d-none')
+
+var estado = document.getElementsByClassName('estado');
+  function estados(){
+  for(i=0;i<estado.length;i++){
+  if(estado[i].textContent == "Entregado"){
+     estado[i].classList.add('bg-success');
+  }
+  else{
+    estado[i].classList.add('bg-danger');
+  }
+}
+}
+estados();
   </script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
