--- a/src/main/resources/templates/interfaz_cliente/templates/pqrs.html
+++ b/src/main/resources/templates/interfaz_cliente/templates/pqrs.html
@@ -21,7 +21,10 @@
                     <i class="fas fa-user-circle user"></i>
                   </button>
                   <ul class="dropdown-menu boton" aria-labelledby="dropdownMenuButton1">
-                      <li sec:authorize="isAuthenticated()"><a class="dropdown-item menuperfil cerrar" th:href="@{/logout}"><i class="fas fa-sign-out-alt m-1"></i>Cerrar Sesión</a></li>                  </ul>
+                      <li sec:authorize="isAuthenticated()"><a class="dropdown-item menuperfil cerrar" th:href="@{/logout}"><i class="fas fa-sign-out-alt m-1"></i>Cerrar Sesión</a></li>
+                      <li sec:authorize="isAuthenticated()"><a class="dropdown-item menuperfil cerrar" th:href="@{/registro/editar_datos_cliente}"><i class="fas fa-user-edit m-1"></i></i>Editar Mi Información</a></li>
+                  </ul>
+
                 </div>
             </div>
         </div>
@@ -103,6 +106,7 @@
                 <nav class="menu d-flex d-sm-block justify-content-center flex-wrap">
                     <a class="nav-link" th:href="@{/compras_cliente}"><i class="fas fa-dollar-sign"></i></i><span>Mis Compras</span></a>
                     <a class="nav-link" th:href="@{/solicitudes_pqrs_cliente}"><i class="far fa-smile"></i><span>Mis Solicitudes PQRS</span></a>
+                    <a class="nav-link enviosBoton d-none" th:href="@{/envios_cliente}" th:each="envio : ${envio}" th:object="${envio}" th:if="${envio.venta.pedido.cliente.email} == ${#authentication.name}"><i class="fas fa-shipping-fast"></i><span>Mis Envios</span></a>
               </nav>
             </div>
             <main class="main col">
@@ -140,7 +144,7 @@
                     <td scope="row" th:text="${listarPqrs.idPqrs}"></td>
                     <td th:text="${listarPqrs.descripcionPqrs}"></td>
                     <td th:text="${listarPqrs.fecha}"></td>
-                    <td th:text="${listarPqrs.estadoPqrs}">Respondido <button th:object="${listarPqrs}" th:if="${listarPqrs.estadoPqrs} == respondido" class="btn m-2" type="submit" data-bs-toggle="tooltip" title="verRespuesta"><i class="bi bi-eye"></i></button></td>
+                      <td><span class='badge estado' th:text="${listarPqrs.estadoPqrs}"></span></td>
                       <td> <button th:object="${listarPqrs}" th:if="${listarPqrs.estadoPqrs} == respondido" class="btn m-2" type="submit" data-bs-toggle="modal" th:attr="data-bs-target='#res'+${listarPqrs.idPqrs}" title="verRespuesta"><i class="bi bi-eye"></i></button></td>
                   </tr>
                 </tbody>
@@ -174,6 +178,23 @@
     }
   }
 }
+
+envios = document.getElementsByClassName('enviosBoton')
+envios[0].classList.remove('d-none')
+
+var estado = document.getElementsByClassName('estado')
+function estados(){
+  for(i=0;i<estado.length;i++){
+  if(estado[i].textContent == "respondido"){
+    estado[i].classList.add('bg-success');
+  }
+  else{
+
+    estado[i].classList.add('bg-danger');
+  }
+}
+}
+estados();
     </script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
